# nightscout

./: README.md  extension.js  meson.build  metadata.json  prefs.js
schemas/: gschemas.compiled  org.gnome.shell.extensions.nightscout.gschema.xml
